# clay_3dp_print

./: .gitignore  LICENSE  flake.nix  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: pixi_build_test.yaml
extra/: generate_frames_and_extrusion_rates.ghx
extra/compas_rrc_compose/: compose.yaml
extra/compas_rrc_compose_sim/: compose.yaml
src/clay_3dp_print/: __init__.py  __main__.py  list_operations.py  print_frame.py  print_layer.py  rrc_streaming.py  toolpath_loader.py
tests/clay_3dp_print/: conftest.py  test_list_operations.py  test_print_frame.py  test_print_layer.py  test_rrc_streaming.py  test_toolpath_loader.py
