[project]
authors = [{ name = "Anton Tetov", email = "anton@tetov.se" }]
dependencies = ["compas>=2,<3", "compas_rrc>=2,<3"]
license = "MIT"
name = "clay_3dp_print"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = ["ruff"]
test = ["pytest"]

[project.scripts]
clay_3dp_print = "clay_3dp_print.__main__:main"

[project.urls]
Repository = "https://github.com/biodigitalmatter/clay_3dp_print"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "nodefaults"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
clay_3dp_print = { path = ".", editable = true }

[tool.pixi.dependencies]
compas = ">=2,<3"
compas_rrc = ">=2,<3"

[tool.pixi.feature.dev.tasks]
fmt = "ruff check --fix && ruff format"
test = "pytest"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }

[tool.ruff.lint]
extend-select = ["I"]